fix spacing

--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,7 @@ header.scrolled .top-contact-bar{display:none;}
 
 .bottom-content-overlay{position:absolute; inset:0; z-index:10;}
 .bottom-container-inner{max-width:1350px; margin:0 auto; padding:0 20px; height:100%; position:relative;}
-.socials-box{position:absolute; top:42%; left:33.5%; display:flex; gap:34px;}
+.socials-box{position:absolute; top:41%; left:24%; display:flex; gap:34px;}
 .twitter-box{position:absolute; top:16%; left:57%;}
 .social-btn{width:50px; height:50px; border-radius:50%; border:4px solid #f3f3f3; display:flex; justify-content:center; align-items:center; color:#022F5D; font-size:14px; text-decoration:none; background:rgba(255,255,255,.1); transition:.3s;}
 .social-btn i {font-size: 20px; font-weight: 600;}
